deleted wandb key

--- a/main.ipynb
+++ b/main.ipynb
@@ -504,7 +504,7 @@
    ],
    "source": [
     "import wandb\n",
-    "wandb.login(key=\"5e4de12fa847ce69f658bd4cd6ef1819aa110ed5\")\n"
+    "wandb.login(key=\"xxx\")\n"
    ]
   },
   {
