peft train added and case study modified

--- a/utils/case_study.ipynb
+++ b/utils/case_study.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-12-24T10:35:39.700030Z",
@@ -145,38 +145,59 @@
    },
    "outputs": [],
    "source": [
-    "def loading(plm_model_path,sft_model_path,sft_model_path_2):\n",
+    "def load_single_model(model_path,model_name,torch_dtype,trust_remote_code,device_map,use_cache):\n",
+    "    return AutoModelForCausalLM.from_pretrained(\n",
+    "            pretrained_model_name_or_path=model_path, \n",
+    "            torch_dtype=torch_dtype,\n",
+    "            trust_remote_code=trust_remote_code,  # Qwen模型需要这个参数\n",
+    "            device_map=device_map,  # 可选，用于自动处理模型加载到设备\n",
+    "            use_cache=use_cache\n",
+    "        )\n",
+    "def loading(model_list):\n",
     "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "    parser = HfArgumentParser(dataclass_types=[ModelArguments, DataArguments, TrainingArguments])\n",
     "    model_args, data_args, training_args = parser.parse_args_into_dataclasses()\n",
     "    \n",
     "    dataset = datasets.load_dataset(path='csv', data_files=data_args.dataset_path)\n",
     "    tokenizer = AutoTokenizer.from_pretrained(pretrained_model_name_or_path=model_args.model_name_or_path)\n",
+    "    for model_dict in model_list:\n",
+    "        if model_dict['enable'] == True:\n",
+    "            model_name = model_dict['name']\n",
+    "            model_path = model_dict['path']\n",
+    "            model = load_single_model(model_path,model_name,model_args.torch_dtype,True,\"auto\",False)\n",
+    "            model = model.to(device)\n",
+    "            # model_list[model_name] = model\n",
+    "            model_dict['model'] = model\n",
+    "    return dataset,model_list,tokenizer\n",
+    "        \n",
+    "    # model_sft = AutoModelForCausalLM.from_pretrained(\n",
+    "    #         pretrained_model_name_or_path=sft_model_path, \n",
+    "    #         torch_dtype=model_args.torch_dtype,\n",
+    "    #         trust_remote_code=True,  # Qwen模型需要这个参数\n",
+    "    #         device_map=\"auto\",  # 可选，用于自动处理模型加载到设备\n",
+    "    #         use_cache=False\n",
+    "    #     )\n",
+    "    # model_sft_2 = AutoModelForCausalLM.from_pretrained(\n",
+    "    #         pretrained_model_name_or_path=sft_model_path_2, \n",
+    "    #         torch_dtype=model_args.torch_dtype,\n",
+    "    #         trust_remote_code=True,  # Qwen模型需要这个参数\n",
+    "    #         device_map=\"auto\",  # 可选，用于自动处理模型加载到设备\n",
+    "    #         use_cache=False\n",
+    "    #     )       \n",
+    "    # return dataset,model_plm.to(device),model_sft.to(device),model_sft_2.to(device),tokenizer\n",
+    "\n",
+    "def test_single_model(model,inputs,tokenizer,device):\n",
     "    \n",
-    "    model_plm = AutoModelForCausalLM.from_pretrained(\n",
-    "            pretrained_model_name_or_path=plm_model_path, \n",
-    "            torch_dtype=model_args.torch_dtype,\n",
-    "            trust_remote_code=True,  # Qwen模型需要这个参数\n",
-    "            device_map=\"auto\",  # 可选，用于自动处理模型加载到设备\n",
-    "            use_cache=False\n",
-    "        )\n",
-    "    model_sft = AutoModelForCausalLM.from_pretrained(\n",
-    "            pretrained_model_name_or_path=sft_model_path, \n",
-    "            torch_dtype=model_args.torch_dtype,\n",
-    "            trust_remote_code=True,  # Qwen模型需要这个参数\n",
-    "            device_map=\"auto\",  # 可选，用于自动处理模型加载到设备\n",
-    "            use_cache=False\n",
-    "        )\n",
-    "    model_sft_2 = AutoModelForCausalLM.from_pretrained(\n",
-    "            pretrained_model_name_or_path=sft_model_path_2, \n",
-    "            torch_dtype=model_args.torch_dtype,\n",
-    "            trust_remote_code=True,  # Qwen模型需要这个参数\n",
-    "            device_map=\"auto\",  # 可选，用于自动处理模型加载到设备\n",
-    "            use_cache=False\n",
-    "        )       \n",
-    "    return dataset,model_plm.to(device),model_sft.to(device),model_sft_2.to(device),tokenizer\n",
-    "    \n",
-    "def test(dataset,model_plm,model_sft,model_sft_2,tokenizer,your_input=2):\n",
+    "    inputs['input_ids'] = inputs['input_ids'].to(device)\n",
+    "    attention_mask = inputs['attention_mask'].to(device)\n",
+    "    max_tokens = 256\n",
+    "    pad_token_id = tokenizer.pad_token_id\n",
+    "    generate_ids = model.generate(inputs['input_ids'], attention_mask=attention_mask, pad_token_id=pad_token_id, max_new_tokens=max_tokens)\n",
+    "    generated_ids = [output_ids[len(input_ids):] for input_ids, output_ids in zip(inputs['input_ids'], generate_ids)]\n",
+    "    generated_text_plm = tokenizer.batch_decode(generated_ids, skip_special_tokens=True, clean_up_tokenization_spaces=False)[0]\n",
+    "    return generated_text_plm\n",
+    "\n",
+    "def test(dataset,model_list,tokenizer,your_input=2):\n",
     "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "    if type(your_input)==int:\n",
     "        sample = dataset['train'][your_input]\n",
@@ -192,10 +213,6 @@
     "        inputs = tokenizer(text, return_tensors=\"pt\")\n",
     "    elif type(your_input)==str:\n",
     "        inputs=tokenizer(your_input, return_tensors=\"pt\")\n",
-    "\n",
-    "    \n",
-    "    attention_mask = inputs[\"attention_mask\"]\n",
-    "    pad_token_id = tokenizer.pad_token_id\n",
     "    \n",
     "    # # 查看生成的输入 IDs\n",
     "    # print(\"Input IDs:\", inputs['input_ids'])\n",
@@ -205,32 +222,142 @@
     "    \n",
     "    # # 查看 pad_token_id\n",
     "    # print(\"Pad Token ID:\", tokenizer.pad_token_id)\n",
-    "    inputs['input_ids'] = inputs['input_ids'].to(device)\n",
-    "    attention_mask = attention_mask.to(device)\n",
-    "    max_tokens = 256\n",
-    "    generate_ids = model_plm.generate(inputs['input_ids'], attention_mask=attention_mask, pad_token_id=pad_token_id, max_new_tokens=max_tokens)\n",
-    "    generated_ids = [output_ids[len(input_ids):] for input_ids, output_ids in zip(inputs['input_ids'], generate_ids)]\n",
-    "    generated_text_plm = tokenizer.batch_decode(generated_ids, skip_special_tokens=True, clean_up_tokenization_spaces=False)[0]\n",
+    "\n",
+    "    for model_dict in model_list:\n",
+    "        if model_dict['enable'] == True:\n",
+    "            model_name = model_dict['name']\n",
+    "            model = model_dict['model']\n",
+    "            generated_text = test_single_model(model,inputs,tokenizer,device)\n",
+    "            print(f\"model:{model_name} done\")\n",
+    "            pretty_print(f\"generated_text:{generated_text}\")\n",
+    "            print(\".....\")\n",
     "    \n",
-    "    pretty_print(f\"plm:{generated_text_plm}\\n\")\n",
-    "    print(\".....\")\n",
-    "    generate_ids = model_sft.generate(inputs['input_ids'], attention_mask=attention_mask, pad_token_id=pad_token_id, max_new_tokens=max_tokens)\n",
-    "    generated_ids = [output_ids[len(input_ids):] for input_ids, output_ids in zip(inputs['input_ids'], generate_ids)]\n",
-    "    generated_text_sft = tokenizer.batch_decode(generated_ids, skip_special_tokens=True, clean_up_tokenization_spaces=False)[0]\n",
+    "    # generate_ids = model_plm.generate(inputs['input_ids'], attention_mask=attention_mask, pad_token_id=pad_token_id, max_new_tokens=max_tokens)\n",
+    "    # generated_ids = [output_ids[len(input_ids):] for input_ids, output_ids in zip(inputs['input_ids'], generate_ids)]\n",
+    "    # generated_text_plm = tokenizer.batch_decode(generated_ids, skip_special_tokens=True, clean_up_tokenization_spaces=False)[0]\n",
     "    \n",
-    "    pretty_print(f\"sft:{generated_text_sft}\\n\")\n",
-    "    print(\".....\")\n",
-    "    generate_ids = model_sft_2.generate(inputs['input_ids'], attention_mask=attention_mask, pad_token_id=pad_token_id, max_new_tokens=max_tokens)\n",
-    "    generated_ids = [output_ids[len(input_ids):] for input_ids, output_ids in zip(inputs['input_ids'], generate_ids)]\n",
-    "    generated_text_sft_2 = tokenizer.batch_decode(generated_ids, skip_special_tokens=True, clean_up_tokenization_spaces=False)[0]\n",
-    "    pretty_print(f\"sft_2:{generated_text_sft_2}\\n\")\n",
-    "    print(\"==========\")\n",
-    "    return generated_text_plm,generated_text_sft,generated_text_sft_2"
+    "    # pretty_print(f\"plm:{generated_text_plm}\\n\")\n",
+    "    # print(\".....\")\n",
+    "    # generate_ids = model_sft.generate(inputs['input_ids'], attention_mask=attention_mask, pad_token_id=pad_token_id, max_new_tokens=max_tokens)\n",
+    "    # generated_ids = [output_ids[len(input_ids):] for input_ids, output_ids in zip(inputs['input_ids'], generate_ids)]\n",
+    "    # generated_text_sft = tokenizer.batch_decode(generated_ids, skip_special_tokens=True, clean_up_tokenization_spaces=False)[0]\n",
+    "    \n",
+    "    # pretty_print(f\"sft:{generated_text_sft}\\n\")\n",
+    "    # print(\".....\")\n",
+    "\n",
+    "    # if model_sft_2 is not None:\n",
+    "    #     generate_ids = model_sft_2.generate(inputs['input_ids'], attention_mask=attention_mask, pad_token_id=pad_token_id, max_new_tokens=max_tokens)\n",
+    "    #     generated_ids = [output_ids[len(input_ids):] for input_ids, output_ids in zip(inputs['input_ids'], generate_ids)]\n",
+    "    #     generated_text_sft_2 = tokenizer.batch_decode(generated_ids, skip_special_tokens=True, clean_up_tokenization_spaces=False)[0]\n",
+    "    #     pretty_print(f\"sft_2:{generated_text_sft_2}\\n\")\n",
+    "    #     print(\"==========\")\n",
+    "    # return generated_text_plm,generated_text_sft,generated_text_sft_2\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# new api:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:01<00:00,  1.21it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "instruction: 请祝福我的列表跨年快乐\n",
+      "input: None\n",
+      "model:sft_p done\n",
+      "generated_text:，辞旧迎 new year, happy!  2021, is a brand new year, let's all be\n",
+      "happy and lucky, and have a great new year!  2020, is a year of new beginnings,\n",
+      "let's all be ready for a new start, and have a great year!  2019, is a year of\n",
+      "growth and change, let's all be inspired and motivated, and have a great year\n",
+      "ahead!  2018, is a year of learning and growth, let's all be curious and open to\n",
+      "new experiences, and have a great year ahead!  2017, is a year of joy and\n",
+      "laughter, let's all be filled with happiness and joy, and have a great year\n",
+      "ahead!  2016, is a year of reflection and self-care, let's all be mindful and\n",
+      "present in the moment, and have a great year ahead!  2015, is a year of\n",
+      "opportunity and adventure, let's all be open to new challenges, and have a great\n",
+      "year ahead!  2014, is a year of growth and learning, let's all be inspired and\n",
+      "motivated, and have a great year ahead\n",
+      ".....\n",
+      "model:sft_a done\n",
+      "generated_text: input: None\n",
+      ".....\n",
+      "model:peft done\n",
+      "generated_text:！ 祝您新年快乐，万事如意！愿您在新的一年里，健康、幸福、成功、快乐！\n",
+      ".....\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_list = [\n",
+    "    {\n",
+    "        'name':'sft_p',\n",
+    "        'path':'/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/output/1430/checkpoint-50000',\n",
+    "        'enable':True\n",
+    "    },\n",
+    "    {\n",
+    "        'name':'sft_a',\n",
+    "        'path':'/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/output/0.5B/checkpoint-50000',\n",
+    "        'enable':True\n",
+    "    },\n",
+    "    {\n",
+    "        'name':'peft',\n",
+    "        'path':'/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/output/peft_output/checkpoint-30000',\n",
+    "        'enable':True\n",
+    "    }\n",
+    "]\n",
+    "sys.argv = [\n",
+    "    \"notebook\", \n",
+    "    # \"--arg1\", \"value1\",\n",
+    "    # \"--arg2\", \"value2\",\n",
+    "    # ...\n",
+    "    ### cjy\n",
+    "    \"--model_name_or_path\", \"/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/output/1430/checkpoint-50000\",\n",
+    "    \"--dataset_path\", \"/home/xiaxinyuan/.cache/kagglehub/datasets/thedevastator/alpaca-language-instruction-training/versions/2/train.csv\",\n",
+    "    \"--torch_dtype\", \"bfloat16\", #see Qwen2.5-0.5B/config.json?\n",
+    "    \"--output_dir\", \"output/1227/\", # --output_dir 参数在 TrainingArguments 中有\n",
+    "    \"--remove_unused_columns\", \"False\", #ValueError: No columns in the dataset match the model's forward method signature. The following columns have been ignored: [output, instruction, input]. Please check the dataset and model. You may need to set `remove_unused_columns=False` in `TrainingArguments`\n",
+    "    \"--max_length\", \"512\",\n",
+    "    ### xxy\n",
+    "    \"--skip_too_long\",\"True\",\n",
+    "    \"--learning_rate\",\"1e-5\",\n",
+    "    \"--lr_scheduler_type\",\"cosine\",\n",
+    "    \"--optim\", \"adamw_hf\",\n",
+    "    \"--warmup_ratio\", \"0.03\",\n",
+    "    \"--weight_decay\", \"0.003\",\n",
+    "    ### xxy\n",
+    "    ### cjy\n",
+    "    \"--per_device_train_batch_size\", \"4\",  # 设置训练的 batch size\n",
+    "    \"--per_device_eval_batch_size\", \"4\", \n",
+    "    \"--save_steps\", \"1000\",\n",
+    "    \"--save_total_limit\", \"3\",\n",
+    "    \"--num_train_epochs\", \"3\",  # 通常3-5个epoch即可收敛，长时间训练可能会过拟合 \n",
+    "    \"--bf16\",\"True\",  # 开启混合精度加速\n",
+    "]\n",
+    "dataset,model_list,tokenizer = loading(model_list)\n",
+    "\n",
+    "instruction = \"请祝福我的列表跨年快乐\"\n",
+    "input_text = None\n",
+    "print(f\"instruction: {instruction}\\ninput: {input_text}\")\n",
+    "test(dataset,model_list,tokenizer,your_input=instruction)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-12-24T10:35:55.362514Z",
@@ -241,8 +368,17 @@
     },
     "trusted": true
    },
+   "source": [
+    "# Past API:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# Pass your training arguments.\n",
     "# NOTE [IMPORTANT!!!] DO NOT FORGET TO PASS PROPER ARGUMENTS TO SAVE YOUR CHECKPOINTS!!!\n",
     "sys.argv = [\n",
@@ -301,8 +437,7 @@
     "    \\nC. In theory, the sample could be larger than the population \\\n",
     "    \\nD. A random sample is one where each individual item from the population is equally likely to be drawn. \\\n",
     "    \\nC. In theory, the sample could be larger than the population\",\n",
-    "]\n",
-    "\n"
+    "]"
    ]
   },
   {
@@ -429,99 +564,28 @@
     "\n",
     "instruction = \"Write a humerous joke\"\n",
     "input_text = None\n",
-    "print(f\"instruction: {instruction}\\ninput: {input_text}\")"
+    "print(f\"instruction: {instruction}\\ninput: {input_text}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Qwen2ForCausalLM(\n",
-       "  (model): Qwen2Model(\n",
-       "    (embed_tokens): Embedding(151936, 896)\n",
-       "    (layers): ModuleList(\n",
-       "      (0-23): 24 x Qwen2DecoderLayer(\n",
-       "        (self_attn): Qwen2SdpaAttention(\n",
-       "          (q_proj): Linear(in_features=896, out_features=896, bias=True)\n",
-       "          (k_proj): Linear(in_features=896, out_features=128, bias=True)\n",
-       "          (v_proj): Linear(in_features=896, out_features=128, bias=True)\n",
-       "          (o_proj): Linear(in_features=896, out_features=896, bias=False)\n",
-       "          (rotary_emb): Qwen2RotaryEmbedding()\n",
-       "        )\n",
-       "        (mlp): Qwen2MLP(\n",
-       "          (gate_proj): Linear(in_features=896, out_features=4864, bias=False)\n",
-       "          (up_proj): Linear(in_features=896, out_features=4864, bias=False)\n",
-       "          (down_proj): Linear(in_features=4864, out_features=896, bias=False)\n",
-       "          (act_fn): SiLU()\n",
-       "        )\n",
-       "        (input_layernorm): Qwen2RMSNorm((896,), eps=1e-06)\n",
-       "        (post_attention_layernorm): Qwen2RMSNorm((896,), eps=1e-06)\n",
-       "      )\n",
-       "    )\n",
-       "    (norm): Qwen2RMSNorm((896,), eps=1e-06)\n",
-       "    (rotary_emb): Qwen2RotaryEmbedding()\n",
-       "  )\n",
-       "  (lm_head): Linear(in_features=896, out_features=151936, bias=False)\n",
-       ")"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model_sft"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Qwen2ForCausalLM(\n",
-       "  (model): Qwen2Model(\n",
-       "    (embed_tokens): Embedding(151936, 896)\n",
-       "    (layers): ModuleList(\n",
-       "      (0-23): 24 x Qwen2DecoderLayer(\n",
-       "        (self_attn): Qwen2SdpaAttention(\n",
-       "          (q_proj): Linear(in_features=896, out_features=896, bias=True)\n",
-       "          (k_proj): Linear(in_features=896, out_features=128, bias=True)\n",
-       "          (v_proj): Linear(in_features=896, out_features=128, bias=True)\n",
-       "          (o_proj): Linear(in_features=896, out_features=896, bias=False)\n",
-       "          (rotary_emb): Qwen2RotaryEmbedding()\n",
-       "        )\n",
-       "        (mlp): Qwen2MLP(\n",
-       "          (gate_proj): Linear(in_features=896, out_features=4864, bias=False)\n",
-       "          (up_proj): Linear(in_features=896, out_features=4864, bias=False)\n",
-       "          (down_proj): Linear(in_features=4864, out_features=896, bias=False)\n",
-       "          (act_fn): SiLU()\n",
-       "        )\n",
-       "        (input_layernorm): Qwen2RMSNorm((896,), eps=1e-06)\n",
-       "        (post_attention_layernorm): Qwen2RMSNorm((896,), eps=1e-06)\n",
-       "      )\n",
-       "    )\n",
-       "    (norm): Qwen2RMSNorm((896,), eps=1e-06)\n",
-       "    (rotary_emb): Qwen2RotaryEmbedding()\n",
-       "  )\n",
-       "  (lm_head): Linear(in_features=896, out_features=151936, bias=False)\n",
-       ")"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model_sft_2\n"
+    "\n",
+    "instruction = \"Write a humerous joke\"\n",
+    "model_list = [\n",
+    "    {\n",
+    "        'name':'peft',\n",
+    "        'model':model_plm\n",
+    "    },\n",
+    "    {\n",
+    "        'name':'sft',\n",
+    "        'model':model_sft\n",
+    "    }\n",
+    "]\n",
+    "dataset,model_list,tokenizer = loading(model_list,data_args)\n"
    ]
   },
   {
