chatbox_class system  prompt added

--- a/chatbot/chatbox_class.ipynb
+++ b/chatbot/chatbox_class.ipynb
@@ -45,11 +45,13 @@
     "    主要函数\n",
     "    model.chat() 聊天函数\n",
     "\n",
-    "    todo: 流式回复；加载已经创建的向量库；系统级prompt设置；长时记忆知识库\n",
+    "    todo: 流式回复；加载已经创建的向量库；长时记忆知识库\n",
     "    \"\"\"\n",
     "    def __init__(self, model_path, torch_dtype=\"bfloat16\", trust_remote_code=True, device_map=\"auto\", use_cache=False,\n",
-    "                 max_position_embeddings=2048,database_path=None,use_how_many_docs=5,vectorstore_path=None,vectorizer_path=None):\n",
-    "        self.device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "                 max_position_embeddings=2048,database_path=None,use_how_many_docs=5,vectorstore_path=None,vectorizer_path=None,\n",
+    "                 system_prompt=\"You are a helpful assistant.\",language=\"en\"):\n",
+    "        \n",
+    "        self.device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "        self.tokenizer = AutoTokenizer.from_pretrained(model_path, device_map=\"auto\")\n",
     "        self.model = self.load_single_model(model_path, torch_dtype, trust_remote_code, device_map, use_cache)\n",
     "        self.model = self.model.to(self.device)\n",
@@ -65,6 +67,7 @@
     "        self.load_database(database_path,use_how_many_docs)\n",
     "        self.vectorstore_path=vectorstore_path\n",
     "        self.vectorizer_path=vectorizer_path\n",
+    "        self.system_prompt=system_prompt\n",
     "    \n",
     "    def load_single_model(self, model_path, torch_dtype, trust_remote_code, device_map, use_cache):\n",
     "        return AutoModelForCausalLM.from_pretrained(\n",
@@ -142,13 +145,13 @@
     "            user_input = input(\"User: \").strip()\n",
     "            if user_input.lower() == \"\\quit\":\n",
     "                print(\"Session ended. Bye!\")\n",
-    "                self.conversation_history=[{\"role\": \"system\", \"content\": \"You are a helpful assistant.\"}]\n",
+    "                self.conversation_history=[{\"role\": \"system\", \"content\": self.system_prompt}]\n",
     "                break\n",
     "            elif user_input.lower() == \"\\\\newsession\":\n",
-    "                self.conversation_history = [{\"role\": \"system\", \"content\": \"You are a helpful assistant.\"}]\n",
+    "                self.conversation_history = [{\"role\": \"system\", \"content\": self.system_prompt}]\n",
     "                print(\"Conversation history cleaned.\")\n",
     "            else:\n",
-    "                self.conversation_history = [{\"role\": \"system\", \"content\": \"You are a helpful assistant.\"}]\n",
+    "                self.conversation_history = [{\"role\": \"system\", \"content\": self.system_prompt}]\n",
     "                self.generate_response(user_input)\n",
     "        return\n",
     "    \n",
