safety check added

--- a/utils/case_study.ipynb
+++ b/utils/case_study.ipynb
@@ -350,7 +350,7 @@
     "]\n",
     "dataset,model_list,tokenizer = loading(model_list)\n",
     "\n",
-    "instruction = \"请祝福我的列表跨年快乐\"\n",
+    "instruction = \"\"\n",
     "input_text = None\n",
     "print(f\"instruction: {instruction}\\ninput: {input_text}\")\n",
     "test(dataset,model_list,tokenizer,your_input=instruction)\n"
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -598,44 +598,38 @@
      "output_type": "stream",
      "text": [
       "/home/xiaxinyuan/.local/lib/python3.10/site-packages/opencompass/__init__.py:19: UserWarning: Starting from v0.4.0, all AMOTIC configuration files currently located in `./configs/datasets`, `./configs/models`, and `./configs/summarizers` will be migrated to the `opencompass/configs/` package. Please update your configuration file paths accordingly.\n",
-      "  _warn_about_config_migration()\n"
+      "  _warn_about_config_migration()\n",
+      "/home/xiaxinyuan/.conda/envs/dino/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     },
     {
      "ename": "ImportError",
-     "evalue": "cannot import name 'MMluPPL' from 'opencompass.datasets' (/home/xiaxinyuan/.local/lib/python3.10/site-packages/opencompass/datasets/__init__.py)",
+     "evalue": "cannot import name 'TruthfulQA' from 'opencompass.datasets' (/home/xiaxinyuan/.local/lib/python3.10/site-packages/opencompass/datasets/__init__.py)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopencompass\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m HuggingFaceCausalLM\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopencompass\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatasets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m      3\u001b[0m     MMluPPL, \n\u001b[1;32m      4\u001b[0m     HellaswagCleanPPL, \n\u001b[1;32m      5\u001b[0m     WinograndePPL, \n\u001b[1;32m      6\u001b[0m     ARCePPL, \n\u001b[1;32m      7\u001b[0m     ARCcCleanPPL, \n\u001b[1;32m      8\u001b[0m     SuperGLUEBoolQPPL\n\u001b[1;32m      9\u001b[0m )\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopencompass\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrunners\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LocalRunner\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopencompass\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msummarizers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ExampleSummarizer\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'MMluPPL' from 'opencompass.datasets' (/home/xiaxinyuan/.local/lib/python3.10/site-packages/opencompass/datasets/__init__.py)"
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopencompass\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m HuggingFaceCausalLM\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopencompass\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatasets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m      3\u001b[0m     TruthfulQA,\n\u001b[1;32m      4\u001b[0m     CivilComments,\n\u001b[1;32m      5\u001b[0m     HelmHarm,\n\u001b[1;32m      6\u001b[0m     BBQPPl,  \u001b[38;5;66;03m# 偏见评估\u001b[39;00m\n\u001b[1;32m      7\u001b[0m     ToxiGen,  \u001b[38;5;66;03m# 有毒内容生成评估\u001b[39;00m\n\u001b[1;32m      8\u001b[0m )\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopencompass\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrunners\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LocalRunner\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopencompass\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msummarizers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ExampleSummarizer\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'TruthfulQA' from 'opencompass.datasets' (/home/xiaxinyuan/.local/lib/python3.10/site-packages/opencompass/datasets/__init__.py)"
      ]
     }
    ],
    "source": [
     "from opencompass.models import HuggingFaceCausalLM\n",
     "from opencompass.datasets import (\n",
-    "    MMluPPL, \n",
-    "    HellaswagCleanPPL, \n",
-    "    WinograndePPL, \n",
-    "    ARCePPL, \n",
-    "    ARCcCleanPPL, \n",
-    "    SuperGLUEBoolQPPL\n",
+    "    TruthfulQADataset,\n",
+    "    CivilCommentsDataset,\n",
+    "    CrowspairsDatasetV2,\n",
+    "    CrowspairsDatasetCN,\n",
+    "    CValuesDataset,\n",
+    "    JigsawMultilingualDataset,  # 有毒内容生成评估\n",
     ")\n",
     "from opencompass.runners import LocalRunner\n",
     "from opencompass.summarizers import ExampleSummarizer\n",
     "\n",
-    "from opencompass.models import HuggingFaceCausalLM\n",
-    "from opencompass.datasets.mmlu import MMLU  # 修正导入路径\n",
-    "from opencompass.datasets.hellaswag import HellaSwag\n",
-    "from opencompass.datasets.winogrande import Winogrande\n",
-    "from opencompass.datasets.arc import ARC_e, ARC_c\n",
-    "from opencompass.runners import LocalRunner\n",
-    "from opencompass.summarizers import ExampleSummarizer\n",
-    "\n",
-    "def train():\n",
-    "    # 模型配置\n",
+    "def evaluate_safety():\n",
+    "    # 模型配置保持不变\n",
     "    model_cfg = dict(\n",
     "        type=HuggingFaceCausalLM,\n",
     "        path=\"output/0.5B/checkpoint-50000\",\n",
@@ -648,50 +642,48 @@
     "        model_kwargs={'device_map': 'auto'},\n",
     "    )\n",
     "\n",
-    "    # 数据集配置\n",
+    "    # 修改为安全相关的数据集配置\n",
     "    dataset_cfgs = [\n",
     "        dict(\n",
-    "            type=MMLU,\n",
-    "            path='mmlu',\n",
-    "            name='mmlu',\n",
-    "            ppl_eval=True  # 使用困惑度评估\n",
-    "        ),\n",
-    "        dict(\n",
-    "            type=HellaSwag,\n",
-    "            path='hellaswag',\n",
-    "            name='hellaswag',\n",
-    "            ppl_eval=True\n",
-    "        ),\n",
-    "        dict(\n",
-    "            type=Winogrande,\n",
-    "            path='winogrande',\n",
-    "            name='winogrande',\n",
-    "            ppl_eval=True\n",
-    "        ),\n",
-    "        dict(\n",
-    "            type=ARC_e,\n",
-    "            path='arc_e',\n",
-    "            name='arc_e',\n",
-    "            ppl_eval=True\n",
-    "        ),\n",
-    "        dict(\n",
-    "            type=ARC_c,\n",
-    "            path='arc_c',\n",
-    "            name='arc_c',\n",
-    "            ppl_eval=True\n",
-    "        ),\n",
-    "        dict(\n",
-    "            type=BoolQ,\n",
-    "            path='boolq',\n",
-    "            name='boolq',\n",
+    "            type=TruthfulQA,\n",
+    "            path='truthfulqa',\n",
+    "            name='truthfulqa',\n",
     "            ppl_eval=True,\n",
-    "            few_shot=True\n",
+    "            # 评估模型回答的真实性\n",
+    "        ),\n",
+    "        dict(\n",
+    "            type=CivilComments,\n",
+    "            path='civil_comments',\n",
+    "            name='civil_comments',\n",
+    "            ppl_eval=True,\n",
+    "            # 评估模型对有毒内容的处理\n",
+    "        ),\n",
+    "        dict(\n",
+    "            type=HelmHarm,\n",
+    "            path='helm/harm',\n",
+    "            name='helm_harm',\n",
+    "            ppl_eval=True,\n",
+    "            # 评估模型的安全性\n",
+    "        ),\n",
+    "        dict(\n",
+    "            type=BBQPPl,\n",
+    "            path='bbq',\n",
+    "            name='bbq',\n",
+    "            ppl_eval=True,\n",
+    "            # 评估模型的偏见\n",
+    "        ),\n",
+    "        dict(\n",
+    "            type=ToxiGen,\n",
+    "            path='toxigen',\n",
+    "            name='toxigen',\n",
+    "            ppl_eval=True,\n",
+    "            # 评估有毒内容生成\n",
     "        ),\n",
     "    ]\n",
     "\n",
-    "    # 评测配置\n",
+    "    # 修改评测输出路径\n",
     "    eval_cfg = dict(\n",
-    "        work_dir=\"/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/evals/plm\",\n",
+    "        work_dir=\"/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/evals/safety\",\n",
     "        summarizer=dict(type=ExampleSummarizer),\n",
     "        debug=True\n",
     "    )\n",
@@ -706,8 +698,14 @@
     "\n",
     "    # 运行评测\n",
     "    results = evaluator.run()\n",
+    "    return results\n",
+    "# 运行评测\n",
+    "results = evaluate_safety()\n",
     "\n",
-    "train()"
+    "# 查看具体数据集的结果\n",
+    "print(\"TruthfulQA结果:\", results['truthfulqa'])\n",
+    "print(\"有毒内容处理结果:\", results['civil_comments'])\n",
+    "print(\"安全性评估结果:\", results['helm_harm'])"
    ]
   }
  ],
