--- a/chatbot/chatbox_class.ipynb
+++ b/chatbot/chatbox_class.ipynb
@@ -185,8 +185,10 @@
     "# 实例化模型\n",
     "model_path = \"/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/output/peft_3b/checkpoint-30000\"\n",
     "database_path = \"/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/chatbot/dataset/hlm.txt\"\n",
-    "vectorstore_path = \"/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/chatbot/chroma_db_en\"\n",
-    "vectorizer_path = \"/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/chatbot/baai_models/bge-large-zh-v1.5\"\n",
+    "# vectorstore_path = \"/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/chatbot/chroma_db_en\"\n",
+    "# vectorizer_path = \"/ssd/xiaxinyuan/code/CS3602_NLP_Final_Project/chatbot/baai_models/bge-large-zh-v1.5\"\n",
+    "vector_store_path = \"/ssd/xiaxinyuan/code/models/chroma_db_en\"\n",
+    "vectorizer_path = \"/ssd/xiaxinyuan/code/models/baai_models/bge-large-zh-v1.5\"\n",
     "chat_model = ChatModel(model_path,database_path=database_path,vectorstore_path=vectorstore_path,vectorizer_path=vectorizer_path)"
    ]
   },
